# clumpy-tool

./: Cargo.toml  README.md  bun.lockb  index.html  oldpackage.json  oldtsconfig.json  package.json  postcss.config.mjs  tsconfig.json  vite.config.js  webpack.config.js
src/: App.svelte  app.css  gl-manager.ts  index.html  index.ts  menu-manager.ts  test.pug  vec.ts
src/archive/: index.html
src/archive/style/: main.scss
src/components/color-wheel/: index.js
src/lib/: Canvas.svelte  gl-manager.ts  util.ts  vec.ts
src/rust-src/: main.rs
src/style/: main.scss
